extended user profile full preview with information. Fixed bug with invisible field error in user setting

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -871,6 +871,10 @@ textarea:-ms-input-placeholder { color: #999999; }
   color: #21262e;
 }
 
+.content__user-descr-person--margin{
+  margin: 2px 0;
+}
+
 .content__info-descr-name{
   color: #21262e;
 }
@@ -1537,6 +1541,10 @@ textarea:-ms-input-placeholder { color: #999999; }
 .content__full-preview{
   height: 100%;
   background-color: #FFFFFF;
+  overflow: auto;
+}
+.content__full-preview::-webkit-scrollbar{
+  display: none;
 }
 
 .content__full-preview-slider{
